--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Password Generator</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
-        <link href="./css/style.css" rel="stylesheet">
-    </head>
-    <body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Password Generator</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+    <link href="./css/style.css" rel="stylesheet">
+    <script src="javascript/script.js"></script>
+</head>
+
+<body>
+    <main>
         <div class="title-box">
             <h1>
                 Generate a secure password
@@ -20,28 +24,51 @@
         </div>
         <div class="password-box">
             <label>Password</label>
-            <input type="text">
+            <div class="password-input-box">
+
+                <input id="password" type="text" disabled>
+                <div onclick="copyToClipboard()" id="copy-to-clipboard">
+                    <svg  fill="none" height="24" viewBox="0 0 24 24" width="24"
+                    xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M8 5H6C4.89543 5 4 5.89543 4 7V19C4 20.1046 4.89543 21 6 21H16C17.1046 21 18 20.1046 18 19V18M8 5C8 6.10457 8.89543 7 10 7H12C13.1046 7 14 6.10457 14 5M8 5C8 3.89543 8.89543 3 10 3H12C13.1046 3 14 3.89543 14 5M14 5H16C17.1046 5 18 5.89543 18 7V10M20 14H10M10 14L13 11M10 14L13 17"
+                            stroke-linecap="round" stroke-linejoin="round" stroke-width="2" />
+                    </svg>
+                    <img src="images/clipboard_check.png" alt="Clipboard Check" class="display-none" width="24px">
+                </div>
+
+
+            </div>
         </div>
         <div class="length-box">
             <label>Password Length</label>
-            <input type="number">
+            <div class="length-input-box">
+                <input type="range" onchange="generatePassword()" id="password-length" name="password-length" min="10"
+                    max="50" value="15" oninput="updateValue(this.value)">
+                <span id="value-display">15</span>
+            </div>
+
         </div>
         <div class="character-inclusions">
-            <button id="character-inclusions-uppercase">
+            <button onclick="toggleSelection(this)" id="character-inclusions-uppercase" class="selected">
                 Uppercase
             </button>
-            <button id="character-inclusions-lowercase">
+            <button onclick="toggleSelection(this)" id="character-inclusions-lowercase" class="selected">
                 Lowercase
             </button>
-            <button id="character-inclusions-numbers">
+            <button onclick="toggleSelection(this)" id="character-inclusions-numbers" class="selected">
                 Numbers
             </button>
-            <button id="character-inclusions-symbols">
+            <button onclick="toggleSelection(this)" id="character-inclusions-symbols" class="">
                 Symbols
             </button>
         </div>
+
         <div class="generate-new-password-box">
-            <button>Generate new password</button>
+            <button onclick="generatePassword()">Generate new password</button>
         </div>
-    </body>
+    </main>
+
+</body>
+
 </html>
